# onlysubs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  logging.ini  pyproject.toml  test.py
requirements/: requirements.dev.txt
src/: __main__.py
src/adapters/db/in_memory/: avatar.py  file.py  uow.py  user.py
src/adapters/emails/smtp/: email_sender.py
src/adapters/emails/stdout/: email_sender.py
src/adapters/storage/local/: file.py
src/application/activate_user/: dto.py  interfaces.py  use_case.py
src/application/add_avatar_to_user/: dto.py  interfaces.py  use_case.py
src/application/common/: exceptions.py  use_case.py
src/application/common/dto/: file.py
src/application/common/interfaces/: avatar.py  emails.py  file.py  uow.py  user.py
src/application/register_user/: dto.py  interfaces.py  use_case.py
src/application/resend_activation_email/: dto.py  interfaces.py  use_case.py
src/domain/dto/: avatar.py  file.py  user.py  user_activation.py
src/domain/exceptions/: user_activation.py
src/domain/models/: avatar.py  file.py  url.py  user.py  user_activation.py
src/domain/services/: avatar.py  file.py  user.py  user_activation.py
src/main/: __init__.py  di.py  exceptions.py  routers.py  web.py
src/onlysubs/application/activate_user/: dto.py  interfaces.py  use_case.py
src/onlysubs/application/add_avatar_to_user/: dto.py  interfaces.py  use_case.py
src/onlysubs/application/common/: exceptions.py  use_case.py
src/onlysubs/main/: di.py  exceptions.py  routers.py  web.py
src/presentation/fapi/: root.py  stub.py
(+46 files in other folders)
