[tool.poetry]
name = "onlysubs"
version = "0.1.0"
description = ""
authors = ["lLotosl <lotosyt1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
sqlalchemy = {extras = ["aiopg"], version = "^2.0.20"}
pydantic = {extras = ["email"], version = "^2.3.0"}
asyncpg = "^0.28.0"
alembic = "^1.11.3"
pyjwt = "^2.8.0"
uvicorn = "^0.23.2"
aiofiles = "^23.2.1"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.285"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "B", "N", "D", "UP", "ANN", "ASYNC", "S", "B", "COM", "DTZ", "T20", "PYI", "PT", "SIM", "TCH", "TD", "FIX", "PT"]
ignore = ["I","EM","FBT","TRY003","S101","D101","D102","D103","D104","D105","G004","D107"]
extend-exclude = ["alembic", "pyproject.toml"]
unfixable = ["T20", "E711"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"path/to/file.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ["alembic", ".venv"]
